--- a/package.json
+++ b/package.json
@@ -8,5 +8,13 @@
     "start": "tsc && node ./out/index.js"
   },
   "author": "srinivasreddyramaram",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "lodash": "^4.17.15",
+    "request": "^2.88.2"
+  },
+  "devDependencies": {
+    "@types/lodash": "^4.14.154",
+    "@types/request": "^2.48.5"
+  }
 }
